--- a/_includes/social.html
+++ b/_includes/social.html
@@ -5,8 +5,8 @@
     {% if site.scholar_userid %}<a href="https://scholar.google.com/citations?user={{ site.scholar_userid }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>{% endif %}
     {% if site.publons_id %}<a href="https://publons.com/a/{{ site.publons_id }}/" target="_blank" title="Publons"><i class="ai ai-publons"></i></a>{% endif %}
     {% if site.research_gate_profile %}<a href="https://www.researchgate.net/profile/{{site.research_gate_profile}}/" target="_blank" title="ResearchGate"><i class="ai ai-researchgate"></i></a>{% endif %}
-    {% if site.facebook_username %}<a href="https://facebook.com/{{ site.facebook_username }}" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>{% endif %}
-    {% if site.youtube_username %}<a href="https://youtube.com/user/{{ site.youtube_username }}" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>{% endif %}
+    {% if site.facebook_username %}<a href="https://www.facebook.com/{{ site.facebook_username }}" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>{% endif %}
+    {% if site.youtube_username %}<a href="https://www.youtube.com/user/{{ site.youtube_username }}" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>{% endif %}
     {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>{% endif %}
     {% if site.linkedin_username %}<a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>{% endif %}
     {% if site.twitter_username %}<a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>{% endif %}
