--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -1,7 +1,9 @@
 .profile {
     img {
-        box-shadow: 0 0 5px $grey-color;
+        box-shadow: 0 0 10px $grey-color;
         width: 100%;
+        min-width: 200px;
+        margin-left: 15px;
     }
 }
 .address {
