--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
     {% if site.last_updated %}
         Last updated: {{ site.last_updated }}.
     {% endif %}
+    <script async src="//static.getclicky.com/101359689.js"></script>
+<noscript><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101359689ns.gif" /></noscript>
   </div>
+
 
 </footer>
